adição de rotas privadas de acordo com o login

--- a/front-end/src/css/login/login.css
+++ b/front-end/src/css/login/login.css
@@ -22,7 +22,7 @@
 .btn-login:hover{
     cursor: pointer;
 }
-.wrapper {
+.wrapper-login {
     display: flex;
     align-items: center;
     flex-direction: column; 
